add banner and navbar

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <script
+      src="https://kit.fontawesome.com/22a70726e2.js"
+      crossorigin="anonymous"
+    ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
+      .font-lexend {
+        font-family: "Lexend", sans-serif;
+      }
+    </style>
     <title>Vite + React</title>
   </head>
-  <body>
+  <body class="font-lexend">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
